assets/css/about-style.css
html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  background-color: #ffffff;
  background-image: url(https://www.transparenttextures.com/patterns/grid-me.png);
}

::-webkit-scrollbar { 
    display: none; 
}

.main-content {
  margin: 0 auto;
  height: 100%;
  width: 100%;
  margin-bottom: 30px;
}

.nav {
  width: 70%;
  margin: 0 auto;
  text-align: center;
}

.background {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  z-index: 0;
  width: 100%;
  height: 100%;
  }

h1{
  padding-top: 7%;
	font-family: 'Quicksand', sans-serif;
	font-size: 45px;
	margin-left: 10%;
	margin-right: 10%;
  margin-bottom: 20px;
  color: #BD0000;
  z-index: 100;
  text-align: left;
}

h2{
	font-family: 'Quicksand', sans-serif;
	font-size: 45px;
  color: black;
  z-index: 100;
  text-align: center;
}

h3{
  font-family: 'Quicksand', sans-serif;
  font-size: 45px;
  color: black;
  z-index: 100;
  text-align: center;
}

h4{
  font-family: 'Encode Sans', sans-serif;
  font-size: 25px;
  color: black;
  z-index: 100;
  text-align: center;
}


p{
	font-family: 'Encode Sans', sans-serif;
  margin-top: 0px;
	font-size: 20px;
	margin-left: 10%;
	margin-right: 10%;
	margin-bottom: 30px;
  color: black;
  z-index: 100;
}


.p1{
	font-family: 'Encode Sans', sans-serif;
	font-size: 20px;
	text-align: left;
	color: black;
	margin: 0%;
	margin-bottom: 30px;
  z-index: 100;
}

.p2{
  font-family: 'Encode Sans', sans-serif;
  font-size: 20px;
  text-align: left;
  color: #80B48A;
  margin: 0%;
  margin-bottom: 30px;
  z-index: 100;
}
.p3{
  font-family: 'Encode Sans', sans-serif;
  font-size: 20px;
  text-align: left;
  color: black;
  margin: 0%;
  margin-bottom: 30px;
  z-index: 100;
}


table, th, td {
	 overflow: hidden;
	 font-family: 'Encode Sans', sans-serif;
   border: 3px solid black;
   color: black;
   font-size: 20px;
   margin-bottom: 30px;
   position: relative;
   background-color: white;
}


#footnote{
  width: 100%;
  left: 0;
  bottom: 0;
  background-color: #878787;
  height: 150px;
  border: 3px solid black;
 background-image: url(https://www.transparenttextures.com/patterns/subtle-carbon.png);

}
#fooot{
  margin-top: 30px;
  font-size: 20px;
  color: black;
}

tr:hover td{
	background-color: #FFFCCD;

}

th{
	height: 40px;
	background-color: #4CAF50;
  color: white;
}
td{
	padding: 15px;
}

.circleR:hover td{
  background-color: #FFEF94;
  overflow: visible;
}

.circleTable, .circleD, .circleR{
  background-color: #FFEF94;
  border: none;
  table-layout: fixed;
  width: 300px;
  height: 300px;
  margin:10px;
  text-align: center;
  padding: 0px;
  overflow: visible;
  text-align: center;
  z-index: 300;
}


h4{
  margin-top: 30%;
  font-family: 'Quicksand', sans-serif;
  font-size: 13px;
  color: white;
}
.circle {
  text-align: center;
  width: 250px;
  height: 250px;
  border-radius: 50%;
  position: relative;
  float: left;
  transition: all .2s ease-in-out;
  z-index: 100;
  border: solid 3px;
  border-color: black;
  overflow: visible;
}

.circle:hover{
  transform: scale(1.1);
}
#zero{
  left: 20px;
  background-color: #00469C;
}

#one{
  background-color: #FF7400;

}

#two{
  background-color: #02007A;
}

#three{
  left: 20px;
  background-color: #1C1E63;
}

#four{
  background-color: #331051;

}

#five{
  background-color: #50870F;
}

@-webkit-keyframes shrinkGrow {
  from { width: 250px; height: 250px; }
  to   { width: 230px; height: 230px; }
}
@keyframes shrinkGrow {
  from { width: 250px; height: 250px; }
  to   { width: 230px; height: 230px; }
}

#one, #three, #five {
  -webkit-animation: 
                     shrinkGrow 1.5s  linear infinite alternate;
  animation:
                     shrinkGrow 1.5s  linear infinite alternate;
}

#zero, #two, #four{
  -webkit-animation: 
                     shrinkGrow 3.5s  linear infinite alternate;
  animation: 
                     shrinkGrow 3.5s  linear infinite alternate;
}

.buttons{
	font-family: 'Quicksand', sans-serif;
	border-style: solid;
	border-color: black;
  border-radius: 25px;
	padding: 20px;
	text-align: center;
	margin: 10px;
	width: 300px;
	height: 60px;
	text-decoration: none;
	color: black;
	display: inline-block;
	font-size: 25px;
}

.buttons:hover{
  transform: scale(1.1);
}

li{
	font-family: 'Encode Sans', sans-serif;
	font-size: 20px;
  color: black;
}

.gad-facts{
  font-size: 25px;
  line-height: 30px;

}

#symptoms, #symptomsOutline, #animatedModal{
  background-color: #70b3e0;
}


#life{
  background-color: #FFEC5C;
}

#lifeOutline{
  background-color: #FFEF94;
}

#facts, #factsOutline{
	background-color: #FFC15A;

}
#resources, #resourcesOutline{
  background-color: #B4F6CD;
}


 #berkResources{
  background-color: #F3B6FF;
  width: 660px;
  text-align: center;
  margin: 0 auto;
  margin-top: 10px;
  margin-bottom: 20px;
}

#mentalResourcesOutline{
  background-color: #F3B6FF;
}

.modal-content, .buttons{
   background-image: url(https://www.transparenttextures.com/patterns/subtle-carbon.png);;
}

a {
    color:#E74B3D;
    font-weight:700;
    z-index: 100;
    vertical-align: middle;
    text-decoration: none;
}

[class*="close-"] {
  cursor: pointer;
  display: block;
  font-size: 1.75em;
  height: 50px;
  line-height: 50px;
  margin: 1em auto;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: 50px;
  z-index: 100;
}

#closebt-container {
  position: relative;
  width:100%;
  text-align:center;
  margin-top:40px;
}

.closebt {
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  -ms-transition: all 0.2s;
  -o-transition: all 0.2s;
  transition: all 0.2s;
  cursor:pointer;
  width: 100%;

}

.closebt:hover {
  transform:rotate(90deg);
}


#fact-card-stack{
  width: 85%;
  margin: 0 auto;
  text-align: center;
  position: relative;
}

#treatment-options{
  width: 85%;
  margin: 0 auto;
  text-align: center;
  position: relative;
}

#berkeley-resources{
  width: 85%;
  margin: 0 auto;
  text-align: center;
  position: relative;
}

.treat{
  width: 80%;
  margin-left: 2.5%;
  margin-right: 2.5%;
  margin-bottom: 20px;
  height: 200px;
  border: 3px solid black;
  position: relative;
  background-color: white;
  display: inline-block;
  padding: 20px;
  font-size: 25px;
  font-family: 'Encode Sans', sans-serif;

}



.reso{
  width: auto;
  height: auto;
  border: 3px solid black;
  position: relative;
  background-color: white;
  display: inline-block;
  margin: 10px;
  padding: 20px;
  font-size: 25px;
  font-family: 'Encode Sans', sans-serif;
}

.make:hover{
  transform: scale(1.1);
}

.make{
  width: auto;
  height: auto;
  border: 3px solid black;
  position: relative;
  background-color: #FFF9A2;
  color: black;
  display: inline-block;
  margin: 10px;
  padding: 20px;
  font-size: 20px;
  font-family: 'Encode Sans', sans-serif;
  text-align: center;
}

.call{
  width: auto;
  height: auto;
  border: 3px solid black;
  position: relative;
  background-color: #C6C6C6;
  color: black;
  display: inline-block;
  margin: 10px;
  padding: 20px;
  font-size: px;
  font-family: 'Encode Sans', sans-serif;
  text-align: center;

}

.fact-card:hover .answer{
  opacity: 1;
      -webkit-transition: all 0.8s ease-in-out;
    -moz-transition: all 0.8s ease-in-out;
    -o-transition: all 0.8s ease-in-out;
    transition: all 0.8s ease-in-out;
}

.fact-card:hover .question{
  opacity: 0;
        -webkit-transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;

}

.question{
  text-align: left;
  margin-left: 5%;
  margin-right: 5%;
  position: absolute;
}
.answer{
  text-align: left;
  margin-left: 5%;
  margin-right: 5%;
  position: absolute;
  opacity: 0;
  font-size: 20px;
}
.fact-card{
  width: 300px;
  height: 200px;
  border: 3px solid black;
  position: relative;
  background-color: white;
  display: inline-block;
  padding: 20px;
  font-size: 25px;
  font-family: 'Encode Sans', sans-serif;
}
.modal-content {
  display: block;
  margin: 1em auto;
  max-width: 1000px;
  padding: 10px;
  border: 3px solid;
  border-radius: 25px ;
}

.thum {
  display: block;
  overflow: hidden;
  position: relative;
  width: initial;
  margin: 50px;
}

.thum img {
  display: inline-block;
  margin: 0 2px 2px;
  width: 48%;
  -webkit-transition: all .45s ease-in-out;
  -moz-transition: all .45s ease-in-out;
  transition: all .45s ease-in-out;
}

@media only screen and (min-width: 1024px) {
  .modal-content {
    padding: 0;
  }
  .thum img {
    width: 32%;
    -webkit-transition: all .45s ease-in-out;
    -moz-transition: all .45s ease-in-out;
    transition: all .45s ease-in-out;
  }
}

@media only screen and (max-width: 340px) {
  .thum img {
    display: block;
    margin: 0 auto 8px;
    width: 100%;
    -webkit-transition: all .45s ease-in-out;
    -moz-transition: all .45s ease-in-out;
    transition: all .45s ease-in-out;
  }
}

